[package]
name = "bench_seperate"
version = "0.1.0"
authors = ["Vladimir Motylenko <vladimir.motylenko@xdev.re>"]

[[bin]]
name = "criterion"
path = "src/criterion_main.rs"
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
byteorder = "1.1.0"
hex = "0.3.0"
bit-vec = "0.4.4"
vec_map = "0.8.0"
rand = "0.4.2"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
bincode = "1.0.1"
failure = "0.1.1"
rust_decimal = "0.8.1"
criterion="0.2"
chrono = { version = "0.4.0", features = ["serde"] }
uuid = { version = "0.6.0", features = ["serde"] }

exonum_sodiumoxide = "0.0.16"